--- a/style.css
+++ b/style.css
@@ -48,10 +48,11 @@ footer .who {
 .who a {
   text-decoration: none;
   color: rgb(255, 255, 255);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 .who a:hover {
-  border-bottom: 2px solid rgb(255, 255, 255);
+  border-bottom: none;
 }
 
 
