--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ footer .who {
   text-align: center;
   justify-content: center;
   font-size: 1.8rem;
-  padding-top: 35rem;
+  padding-top: 35rem !important;
   color: whitesmoke;
 }
 
@@ -71,7 +71,7 @@ footer .who {
     text-align: center;
     justify-content: center;
     font-size: 1rem;
-    padding-top: 30rem;
+    padding-top: 30rem !important;
   }
 
 }
