--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ footer .who {
   }
 
   footer .who {
-    display: none;
-    visibility: hidden;
+    display: none !important;
+    visibility: hidden !important;
   }
 
 }
