--- a/style.css
+++ b/style.css
@@ -67,8 +67,12 @@ footer .who {
   }
 
   footer .who {
-    display: none !important;
-    visibility: hidden !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  justify-content: center;
+  font-size: 1.8rem;
+  padding-top: 95rem !important;
+  color: whitesmoke;
   }
 
 }
