--- a/style.css
+++ b/style.css
@@ -67,7 +67,12 @@ footer .who {
   }
 
   footer {
-    visibility: hidden !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    justify-content: flex-end;
+    font-size: 1.8rem;
+    padding-top: 35rem;
+    color: whitesmoke;
   }
 
 }
